fix icon spacing

--- a/packages/assets/scss/02-molecules/_action-step.scss
+++ b/packages/assets/scss/02-molecules/_action-step.scss
@@ -10,7 +10,7 @@
   &__icon {
     position: absolute;
       top: 25px;
-      left: 10px;
+      left: 20px;
     text-align: center;
 
     & > svg {
